--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 14 Oct 2025 11:20:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Amityville Playhouse 2015 1080p WEBRip-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/sr3j2dik2w2y
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 14 Oct 2025 11:40:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Maintenance Required 2025 1080p WEBRip x265 10bit 5.1-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/0rjqp3q1ycn7
+https://clicknupload.one/ghnizknnk8ig
+https://clicknupload.one/40z0fp2ardw4
+https://clicknupload.one/p6ofurd7qsk9
+https://clicknupload.one/5v0gy63bd143
+https://clicknupload.one/3v319dc019xn
+https://clicknupload.one/w15dqyufrzya
+https://clicknupload.one/t6g8wu6flqo4
+https://clicknupload.one/zjt76omn0g02
+https://clicknupload.one/ideixaggyr15
+https://clicknupload.one/rknkkqj955jw
+https://clicknupload.one/1luhz3h4dp4d
+https://clicknupload.one/g4tvrd8e2nra
+https://clicknupload.one/44dvrljn81yg
+https://clicknupload.one/ltt143jfrybx
+https://clicknupload.one/hmlppbgdps0m
+https://clicknupload.one/8cp0kl01r8l7
+https://clicknupload.one/gxphtkawlvqe
+https://clicknupload.one/dy6ur1uwf4hx
+https://clicknupload.one/02djaoj77v7a
+https://clicknupload.one/a4jntvshuzq5
+https://clicknupload.one/7l90b8rogd1h
+https://clicknupload.one/fkn43bnknfjn
+https://clicknupload.one/paneqvtnk29o
+https://clicknupload.one/xozy8r8aq1fa
+https://clicknupload.one/ms1hatxuy9n3
+https://clicknupload.one/sehuqo2t8zsc
+https://clicknupload.one/wr1gvi9vhav9
+https://clicknupload.one/auqnimon25u8
+https://clicknupload.one/9fch2zcfxfpo
+https://clicknupload.one/0jzj4dfys8qf
+https://clicknupload.one/34u7netgq335
+https://clicknupload.one/zqqcugye0zle
+https://clicknupload.one/xj1cu5ucfqo0
+https://clicknupload.one/ay68qnzurl7w
+https://clicknupload.one/t68yl0s136vw
+https://clicknupload.one/q2jwc0layajl
+https://clicknupload.one/5arttsn26ylu&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Maintenance Required 2025 1080p WEBRip x265 10bit 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.7GB mp4 HEVC (MAIN 10) (HEV1) / AAC (LC) (MP4A) HD 1920x800 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Maintenance Required" itemprop="image" longdesc="/i/33335602" src="https://rmz.cr/data/images/movies/2025-10/maintenance-required.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: prime video&lt;br&gt;Original Language: English&lt;br&gt;Country: United States, United Kingdom&lt;br&gt;MPAA Rate: PG-13&lt;br&gt;Genre: Comedy | Romance&lt;br&gt;Maintenance Required (2025)&lt;br&gt;Storyline:
+                            Charlie, forced to reevaluate her all-female mechanic shop, unknowingly confides in her online confidant Beau, who turns out to be her real-life business rival, their connection blossoms amidst professional rivalry.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt33335602" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt33335602/" target="_blank"&gt;http://www.imdb.com/title/tt33335602/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) (HEV1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x800&lt;/pre&gt;</description><pubDate>Tue, 14 Oct 2025 15:29:11 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/maintenance-required-2025-1080p-webrip-x265-10bit-51-yts</guid></item><item><title>Amityville Playhouse 2015 1080p WEBRip-YTS (1.7GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/sr3j2dik2w2y
 https://clicknupload.one/tg73iqrccggv
 https://clicknupload.one/svmmnawp2raq
 https://clicknupload.one/e8x5yzdlnwa2
